@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
'left to right direction
skinparam classAttributeIconSize 0
hide circle
hide methods


class Team{
    collaborators
}

class Task {
    reference
    description
    informalDesc
    technicalDesc
    duration
    cost
}

class Collaborators {
    name
    birthdate
    admission date
    address
    contact info (mobile and email)
    ID doc type
    ID number
}

class ToDoList{
    task description
}

class Agenda{
    task description
}

Task "1" -- "1" ToDoList : goes to >
Team "1" -- "1" Task : attributed <
Collaborators "1" -- "1..*" Team : make >
ToDoList "1" -- "1" Agenda : goes to >
@enduml

Task "1" -- "1" Agenda : goes to >
Team "1" -- "1" Task : attributed <
Collaborators "1" -- "1..*" Team : make >
@enduml

